# D-MoCap

./: README.md
MultiKinect/: CMakeLists.txt  client.cpp  server.cpp
SingleTest/: CMakeLists.txt  main.cpp
